fix: reduce spacing between siblings with the same bg color

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,3 +7,7 @@
     "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
     "Segoe UI Symbol", "Noto Color Emoji";
 }
+
+[data-collapsible="true"].bg-white + [data-collapsible="true"].bg-white {
+  @apply pt-0 md:pt-0;
+}
